# bloodspilot-clients

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  autogen.sh  build-454.sh  build-x11.sh  config.h.in  configure  configure.ac
cmake/: config.h.in
doc/: Makefile.in
doc/man/: Makefile.am  Makefile.in
share/: Makefile.am  Makefile.in
share/sound/: Makefile.in
share/textures/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/client/: CMakeLists.txt  Makefile.am  Makefile.in  arraylist.c  client.c  client.h  frame.c  global.c  mapdata.c  meta.h  metaserver.h  portability.h  sysdeps.h  textinterface.c  version.h  xpconfig.c
src/client/454/: CMakeLists.txt  Makefile.am  Makefile.in  textinterface.c  version.h  welcome.c
src/client/items/: Makefile.in
src/client/x11/: CMakeLists.txt  Makefile.am  Makefile.in
src/replay/: CMakeLists.txt  Makefile.am  Makefile.in  xpcommon.h
src/replay/tools/: Makefile.in
